--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "mnote",
   "module": "src/index.ts",
   "type": "module",
+  "scripts": {
+    "build": "bun build ./src/index.ts --compile --outfile mnote"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "typescript": "^5.3.3"
